--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             </div>
                             <div class="content-wrapper" data-aos="fade-up" data-aos-duration="2000">
                                 <div class="news-card">
-                                    <a href="C:\Users\DELL\Desktop\api project/index123.html" class="news-card__card-link"></a>
+                                    <a href="index123.html" class="news-card__card-link"></a>
                                     <img src="images/weather.png" alt="" class="news-card__image">
                                     <div class="news-card__text-wrapper">
                                     <h2 class="news-card__title">sources</h2>
@@ -37,7 +37,7 @@
                         </div>
         
                                 <div class="news-card">
-                                    <a href="C:\Users\DELL\Desktop\api project/news.html" class="news-card__card-link"></a>
+                                    <a href="news.html" class="news-card__card-link"></a>
                                     <img src="images/news.png" alt="" class="news-card__image">
                                     <div class="news-card__text-wrapper">
                                     <h2 class="news-card__title">top headlines</h2>
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div class="news-card">
-                                    <a href="C:\Users\DELL\Desktop\api project/news1.html" class="news-card__card-link"></a>
+                                    <a href="news1.html" class="news-card__card-link"></a>
                                     <img src="images/image2.jpg" alt="" class="news-card__image">
                                     <div class="news-card__text-wrapper">
                                     <h2 class="news-card__title">Everything</h2>
